[package]
name = "sudoku-backend"
description = "The back-end of the \"modern, API-based sudoku app\""
repository = "https://github.com/Galactim/sudoku-backend"
documentation = "https://cdn.rawgit.com/Galactim/Sudoku/backend-doc/sudoku_backend/index.html"
readme = "README.md"
keywords = ["sudoku", "server", "web"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in sudoku-backend.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
rocket_codegen = "0.3"
r2d2-diesel = "0.16"
rocket = "0.3"
clap = "2.32"
r2d2 = "0.7"

[dependencies.diesel_codegen]
version = "0.16"
features = ["sqlite"]

[dependencies.diesel]
version = "0.16"
features = ["large-tables", "sqlite", "chrono"]

[build-dependencies]
reqwest = "0.8"


[[bin]]
name = "sudoku-backend"
test = false
doc = false
