[package]
name = "sudoku-backend"
description = "The back-end of the \"modern, API-based sudoku app\""
repository = "https://github.com/Galactim/sudoku-backend"
documentation = "https://cdn.rawgit.com/Galactim/Sudoku/backend-doc/sudoku_backend/index.html"
readme = "README.md"
keywords = ["sudoku", "server", "web"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in sudoku-backend.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
rocket_codegen = "0.3"
serde_derive = "1.0"
lazy_static = "1.0"
rust-crypto = "0.2"
serde_json = "1.0"
base64 = "0.9"
rocket = "0.3"
serde = "1.0"
clap = "2.32"
time = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.3"
features = ["32-column-tables", "sqlite", "chrono", "r2d2"]


[[bin]]
name = "sudoku-backend"
test = false
doc = false
